--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,6 +17,14 @@
 		</script>
     </head>
     <body>
+    	<div class="navbar navbar-inverse navbar-fixed-top">
+		
+        <h3>
+        <span class="label label-primary">Bem Vindo(a)! </span>
+        <a href="/logout" class="btn btn-primary pull-right" > LogOut</a>
+    	<a class="btn btn-primary pull-right">Minha Conta</a>
+        </h3>
+    	</div>
         @content
     </body>
 </html>
