--- a/app/views/cadastroViagens.scala.html
+++ b/app/views/cadastroViagens.scala.html
@@ -2,47 +2,32 @@
 
 @main("Home Page") {
 
-		<center><img class="centralizar" src="@routes.Assets.at("images/logo.png")" /> </center>
+		
         <ul class="nav nav-pills">
-          <li><a href="/"">Home</a></li>
-          <li class="active"><a href="/cadastrarHackfest">Participar de Evento</a></li>
+          <li><a href="/""> In&iacute;cio</a></li>
+          <li class="active"><a >Cadastrar um novo Hackfest</a></li>
           
         </ul>	
         <div class="container form-horizontal panel panel-primary text-info" >
         
        
-		<center><h2><b>Sistema de Hackfests - Confirma&ccedil;&atilde;o de Participa&ccedil;&atilde;o </b></h2></center>
-		<h3><center>Hackfest: getNome()</center> <br>
-		Idealizador do evento: getNomeAdmin() <br> Contato:getEmailAdmin() <br> </h3>
-		</div>
-		<center>
-		<h3>Para participar insira seus dados e clique em participar:</h3>
-		<h3>numDePessoasQueConfirmaram()</h3>
+		<center><h2><b>Cadastrar uma nova Viagem </b></h2></center>
 		
-		</center>
-		<h3>Pessoas que j&aacute; confirmaram presen&ccedil;a:</h3>
-		<class="table-responsive">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th>Nome </th>
-                            <th>Email </th>
-                            
-                             
-                            
-                        </tr>
-                    </thead>
-                    <tbody>
-                    
-                        <tr>
-                            <td>getNome()</td>
-                            <td>getEmail()</td>
-                        </tr>
-                    </tbody>
-                </table>
+		
+		<form  method="post">
+			<div class="col-lg-7">
+			<h3>Adicionar nova Viagem:</h3><br>
+			<input class="input-xxlarge" type="text" size="40" maxlength="30" placeholder="Destino da viagem" name="local">
+			<br><br>
+            <input class="input-xxlarge" type="text" size="90" maxlength="80" placeholder="Descricao" name="descricao"><br><br>
+            <input class="input-xxlarge" type="text" size="40" maxlength="10" placeholder="Data da viagem: dd/mm/aaaa" name="data"> <br>
             </div>
-		
-		
-
+            
+            <br>
+            
+            <div class="col-lg-11">
+			
+			<br><br><center><input type="submit" class="btn btn-primary" value="Cadastrar">  </center><br><br></div>
+             </form>
         
 }
