--- a/app/views/viagens.scala.html
+++ b/app/views/viagens.scala.html
@@ -1,4 +1,4 @@
-@(tema: String)
+@(tema: String, controlador : ControladorDeBD)
  <div class="container form-horizontal panel panel-primary text-info" >
 
 <div class="table-responsive">
