com logim melhorado

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,10 +1,19 @@
+<!DOCTYPE html>
 
-
-	
-
-
-@main("Login Page") {
-
+<html>
+    <head>
+        <title>CsFTravels</title>
+		<meta charset="utf-8">
+		<link href="@routes.Assets.at("css/bootstrap.min.css")" rel="stylesheet" media="screen">
+		<link rel="stylesheet" media="screen"
+		href="@routes.Assets.at("stylesheets/main.css")">
+		
+		<script
+		src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")"
+		type="text/javascript">
+		</script>
+    </head>
+    <body>
 	 
      <ul class="nav nav-pills">
 	<div class="col-lg-4"></div>
@@ -33,5 +42,7 @@
        </center>
 	}
     </div>
-}
+    </body>
+</html>
+
 	
