--- a/app/views/registro.scala.html
+++ b/app/views/registro.scala.html
@@ -1,6 +1,21 @@
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <title>CsFTravels</title>
+		<meta charset="utf-8">
+		<link href="@routes.Assets.at("css/bootstrap.min.css")" rel="stylesheet" media="screen">
+		<link rel="stylesheet" media="screen"
+		href="@routes.Assets.at("stylesheets/main.css")">
+		
+		<script
+		src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")"
+		type="text/javascript">
+		</script>
+    </head>
+    <body>
 
 
-@main("Register Page") {
 	
      <ul class="nav nav-pills">
      <div class="col-lg-4"></div>
@@ -30,4 +45,6 @@
 	   </center>
 	}
     </div>
-}
+    
+    </body>
+</html>
