--- a/app/views/viagens.scala.html
+++ b/app/views/viagens.scala.html
@@ -7,6 +7,7 @@
                         <tr>
                             <th>Local </th>
                             <th>Descricao </th>
+                            <th>Numero de Participantes</th>
                             <th>Data </th>
                             <th>A&ccedil;&otilde;es </th>
                         </tr>
@@ -16,10 +17,14 @@
                     @for(viagem <- controlador.getViagens()){                                     	
                         <tr>
                             <td>@viagem.getLocal()</td>
-                            <td>@viagem.getDescricao()</td>                            
+                            <td>@viagem.getDescricao()</td>
+                            <td>@viagem.getNumeroDePessoasNaViagem()</td>                            
                             <td>@viagem.getData()</td>
-                            <td>                                    
-                                <input type="submit" class="btn btn-primary" value="Participar">                            
+                            <td>
+                            	<form action="/participarViagem" method="post">
+                            		<input type="hidden" name="local" value="@viagem.getLocal()">                                   
+                                	<input type="submit" class="btn btn-primary" value="Participar">
+                                </form>                          
                             </td>                            
                         </tr> 
                     }                                           
