modificacao em info

--- a/app/views/viagens.scala.html
+++ b/app/views/viagens.scala.html
@@ -9,6 +9,7 @@
                             <th>Descricao </th>
                             <th>Numero de Participantes</th>
                             <th>Data</th>
+                            <th>Mais informacoes</th>
                             <th>Senha</th>
                             <th>A&ccedil;&otilde;es </th>
                         </tr>
@@ -21,6 +22,11 @@
                             <td>@viagem.getDescricao()</td>
                             <td>@viagem.getNumeroDePessoasNaViagem()</td>                            
                             <td>@viagem.getData()</td>
+                            <form action="/infoViagem" method="post">
+                            <td>
+                            		<input type="hidden" name="local" value="@viagem.getLocal()">                                   
+                                	<input type="submit" class="btn btn-primary" value="Info">
+                            </form>
                             <form action="/participarViagem" method="post">
                             <td><input class="input-xxlarge" type="text" size="10" maxlength="10" placeholder="Senha" name="senha"></td>
                             <td>
