--- a/app/views/maisInfo.scala.html
+++ b/app/views/maisInfo.scala.html
@@ -13,7 +13,7 @@
                         <tr>
                             <th>Local </th>
                             <th>Descricao </th>
-                          
+                          	<th>Organizador</th>
                             <th>Data</th>
                             
                             
@@ -26,7 +26,7 @@
                         <tr>
                             <td>@viagem.getLocal()</td>
                             <td>@viagem.getDescricao()</td>
-                                                  
+                            <td>@viagem.getOrganizador().getNome()</td>                     
                             <td>@viagem.getData()</td>
                             
                                                       
