agora podendo editar a viagem

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,7 +20,7 @@
     	<div class="navbar navbar-inverse navbar-fixed-top">
 		
         <h3>
-        <span class="label label-primary">Bem Vindo(a)! </span>
+        <span class="label label-primary">Bem Vindo(a)! @session.get("user")</span>
         <a href="/logout" class="btn btn-primary pull-right" > LogOut</a>
     	<a class="btn btn-primary pull-right">Minha Conta</a>
         </h3>
