--- a/app/views/maisInfo.scala.html
+++ b/app/views/maisInfo.scala.html
@@ -1,6 +1,4 @@
-@(viagem: Viagem)
-
-@main("Home Page") {
+@(viagem: Viagem) @main("Home Page") {
 <ul class="nav nav-pills">
 	<li><a href="/"">Home</a></li>
 	<li><a href="/criarViagem">Criar uma nova viagem</a></li>
@@ -8,27 +6,19 @@
 </ul>
 
 <div class="container form-horizontal panel panel-primary text-info">
-@if(session().get("email").equals(viagem.getOrganizador().getEmail())){
+	@if(session().get("email").equals(viagem.getOrganizador().getEmail())){
 	<div class="table-responsive">
 		<table class="table table-hover">
-		
 			<thead>
 				<tr>
 					<th>Local</th>
 					<th>Descricao</th>
 					<th>Organizador</th>
 					<th>Data</th>
-
-
-
 				</tr>
 			</thead>
-
 			<tbody>
-
 				<tr>
-
-					
 					<form action="/editarViagem" method="post">
 						<td>@viagem.getLocal()</td>
 						<td><input type="hidden" name="local"
@@ -94,18 +84,35 @@
 							value="Editar"></td>
 					</form>
 				</tr>
-					
-				
-
 			</tbody>
 		</table>
-	</div>}else{
-					
-					<center><h2>Local: @viagem.getLocal()</h2></center><br>
-					<center><p class = "lead">@viagem.getDescricao()</p></center>
-					<center><p class = "lead">Organizador: @viagem.getOrganizador().getNome()</p></center>
-					<center><p class = "lead">Data: @viagem.getData()</p></center> 
-					}
+	</div>
+	}else{
+
+	<center>
+		<h2>Local: @viagem.getLocal()</h2>
+	</center>
+	<br>
+	<center>
+		<p class="lead">@viagem.getDescricao()</p>
+	</center>
+	<center>
+		<p class="lead">Organizador: @viagem.getOrganizador().getNome()</p>
+	</center>
+	<center>
+		<p class="lead">Data: @viagem.getData()</p>
+	</center>
+	<center>
+	<form action="/participarViagem" method="post">
+		<input class="input-xxlarge" type="text" size="10" maxlength="10"
+			placeholder="Senha" name="senha"> 
+		<input type="hidden"
+			name="local" value="@viagem.getLocal()"> 
+		<input type="submit"
+			class="btn btn-primary" value="Participar">
+	</form>
+	</center>
+	}
 </div>
 
 
