--- a/app/views/viagens.scala.html
+++ b/app/views/viagens.scala.html
@@ -1,42 +1,22 @@
 @(tema: String, controlador : ControladorDeBD)
- <div class="container form-horizontal panel panel-primary text-info" >
 
-<div class="table-responsive">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th>Local </th>
-                            <th>Descricao </th>
-                            <th>Numero de Participantes</th>
-                            <th>Data</th>
-                            <th>Mais informacoes</th>
-                            <th>Senha</th>
-                            <th>A&ccedil;&otilde;es </th>
-                        </tr>
-                    </thead>
-                    
-                    <tbody>  
-                    @for(viagem <- controlador.getViagens()){                                     	
-                        <tr>
-                            <td>@viagem.getLocal()</td>
-                            <td>@viagem.getDescricao()</td>
-                            <td>@viagem.getNumeroDePessoasNaViagem()</td>                            
-                            <td>@viagem.getData()</td>
-                            <form action="/infoViagem" method="post">
-                            <td>
-                            		<input type="hidden" name="local" value="@viagem.getLocal()">                                   
-                                	<input type="submit" class="btn btn-primary" value="Info">
-                            </form>
-                            <form action="/participarViagem" method="post">
-                            <td><input class="input-xxlarge" type="text" size="10" maxlength="10" placeholder="Senha" name="senha"></td>
-                            <td>
-                            	
-                            		<input type="hidden" name="local" value="@viagem.getLocal()">                                   
-                                	<input type="submit" class="btn btn-primary" value="Participar">
-                            </form>                          
-                            </td>                            
-                        </tr> 
-                    }                                           
-                    </tbody>
-                </table>
-            </div></div>
+
+<div class="row">
+	@for(viagem <- controlador.getViagens()){
+	<div class="col-6 col-sm-6 col-lg-4">
+		<div class="container form-horizontal panel panel-primary text-info">
+			<h2>@viagem.getLocal()</h2>
+			<p>@viagem.getDescricao()</p>
+			<form action="/infoViagem" method="post">
+				<input type="hidden" name="local" value="@viagem.getLocal()">
+				<p>
+					<input type="submit" class="btn btn-primary" value="Info">
+				</p>
+			</form>
+
+		</div>
+	</div>
+	}
+
+
+</div>
