mais uma modificacao de view

--- a/app/views/cadastroViagens.scala.html
+++ b/app/views/cadastroViagens.scala.html
@@ -19,7 +19,7 @@
 			<h3>Adicionar nova Viagem:</h3><br>
 			<input class="input-xxlarge" type="text" size="40" maxlength="30" placeholder="Destino da viagem" name="local">
 			<br><br>
-            <input class="input-xxlarge" type="text" size="90" maxlength="80" placeholder="Descricao" name="descricao"><br><br>
+            <textarea class="input-xxlarge" type="text" size="90" maxlength="80" placeholder="Descricao" name="descricao"></textarea><br><br>
             
 			<select name="dia">
 				<option name="01">01</option>
