--- a/app/views/maisInfo.scala.html
+++ b/app/views/maisInfo.scala.html
@@ -22,9 +22,9 @@
 					<form action="/editarViagem" method="post">
 						<td>@viagem.getLocal()</td>
 						<td><input type="hidden" name="local"
-							value="@viagem.getLocal()"> <input class="input-xlarge"
+							value="@viagem.getLocal()"> <textarea class="input-xlarge"
 							size="25" id="focusedInput" type="text"
-							value="@viagem.getDescricao()" name="descricao"></td>
+							value="@viagem.getDescricao()" name="descricao">@viagem.getDescricao()</textarea></td>
 						<td>@viagem.getOrganizador().getNome()</td>
 						<td><input class="input-xlarge" size="25" id="focusedInput"
 							type="text" value="@viagem.getData()" name="data"> <select
