--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -22,7 +22,7 @@
         <h3>
         <span class="label label-primary">Bem Vindo(a)! @session.get("user")</span>
         <a href="/logout" class="btn btn-primary pull-right" > LogOut</a>
-    	<a class="btn btn-primary pull-right">Minha Conta</a>
+    	<a href="/minhaConta" class="btn btn-primary pull-right">Minha Conta</a>
         </h3>
     	</div>
         @content
